# substrait-compliance

./: .gitignore  .oss-gitignore  .ruleset-test.txt  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  MAINTAINERS.md  NOTICE  OPEN_SOURCE_RELEASE_PLAN.md  OPEN_SOURCE_RELEASE_REPORT.md  OSS_EXCLUDE.md  PHASES_8_9_10_COMPLETE_IMPLEMENTATION.md  PHASE_2_3_IMPLEMENTATION_SUMMARY.md  PHASE_4_5_6_IMPLEMENTATION_SUMMARY.md  PHASE_7_DATA_STORAGE_IMPLEMENTATION_SUMMARY.md  PHASE_7_DATA_STORAGE_PLAN.md  PHASE_8_ANALYTICS_PLAN.md  README.md  README_UPDATE_SUMMARY.md  RELEASE_CHECKLIST.md  REMAINING_LAUNCH_BLOCKERS.md  RESEARCH_PAPERS.md  ROADMAP.md  SDK_TEST_SUITE_VERIFICATION.md  SECURITY.md  SECURITY_SCAN_REPORT.md  VALIDATION_AND_COMPARISON_IMPLEMENTATION_PLAN.md  WORKSHOP_PAPER_PLAN.md  deploy-to-github.sh  enhancement_log.txt  settings.gradle  verify-implementation.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: README.md  api-build-test.yml  api-container-build.yml  api-deploy-production.yml  api-deploy-staging.yml  api-pr-validation.yml  api-release.yml  compliance-leaderboard.yml  engine-compliance-template.yml  release-publish.yml  sdk-build-test.yml  sdk-verification.yml  test-suite-validation.yml
api/: .env.example  API_USAGE.md  Containerfile  DEPLOYMENT.md  README.md  build.gradle  docker-compose.yml
demo/: .gitignore  DASHBOARD_ENHANCEMENTS.md  DASHBOARD_FEATURES.md  DASHBOARD_GUIDE.md  DEMO_SUCCESS.md  DEMO_USAGE.md  ENHANCEMENT_SUMMARY.md  FUNCTION_TESTS_GUIDE.md  QUICKSTART.md  QUICK_DEMO_GUIDE.md  README.md  START_HERE.md  TEST_INSTRUCTIONS.md  TROUBLESHOOTING.md  verify-setup.sh
demo/dashboard/: .gitignore  README.md  TPCDS_INTEGRATION.md  dashboard.js  function-tests.html  index.html  styles.css  test-dashboard.js  tpcds-dashboard.js  tpcds-tests.html
demo/engines/: CloudDBEngine.java  DemoEngineBase.java  DuckDBEngine.java  FastDBEngine.java  MockDBEngine.java  PostgreSQLEngine.java
demo/output/: .gitkeep
demo/runner/: DemoRunner.java  EnhancedDemoRunner.java  FunctionTestDemo.java  SimpleDemoRunner.java  function_test_demo.py  run-demo.sh  run-enhanced-demo.sh  run-function-tests-python.sh  run-function-tests.sh  run-simple-demo.sh
docs/: API_ADVANCED_FEATURES_SUMMARY.md  API_CICD_PLAN.md  API_CONTRIBUTING.md  API_IMPLEMENTATION.md  API_IMPLEMENTATION_COMPLETE.md  API_IMPLEMENTATION_PLAN.md  CI_CD_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  FUNCTION_TESTS_IMPLEMENTATION.md  IMPLEMENTATION_HISTORY.md  IMPLEMENTATION_SUMMARY_2026-04-30.md  PERFORMANCE_BENCHMARKING.md  REST_API_ARCHITECTURE.md  REST_API_GUIDE.md  REST_API_IMPLEMENTATION_GUIDE.md  REST_API_PLAN.md  REST_API_SUMMARY.md  SDK_VERIFICATION.md  SECURITY_HARDENING_GUIDE.md  SUBSTRAIT_COMPLIANCE_FRAMEWORK_GUIDE.md  TECHNICAL_REPORT.md  WEBHOOK_DELIVERY_GUIDE.md  decentralized-substrait-compliance-paper.md
examples/: README.md
examples/datafusion-python/: README.md  datafusion_compliance.py
examples/datafusion-rust/: Cargo.toml  README.md
examples/datafusion-rust/src/: main.rs
examples/duckdb-cpp/: CMakeLists.txt  README.md  duckdb_compliance_engine.cpp  duckdb_compliance_engine.hpp  example_main.cpp
examples/duckdb-java/: README.md  compile.sh
examples/velox-cpp/: CMakeLists.txt  README.md  example_main.cpp  velox_compliance_engine.cpp  velox_compliance_engine.hpp
quality_reports/: abs_quality.json  acos_quality.json  add_quality.json  aggregate_enhancement.json  arithmetic_enhancement.json  arithmetic_quality.json  array_enhancement.json  boolean_enhancement.json  cast_enhancement.json  comparison_enhancement.json  conditional_enhancement.json  datetime_enhancement.json  enhancement_result.json  geospatial_enhancement.json  json_enhancement.json  map_enhancement.json  math_enhancement.json  set_enhancement.json  string_enhancement.json  struct_enhancement.json  window_enhancement.json
scripts/: QUALITY_CHECKER_README.md  QUICKSTART_QUALITY_CHECK.md  QUICK_START_REPORT_GENERATION.md  README.md  REPORT_GENERATOR_CONFIG.md  TECHNICAL_REPORT_GENERATOR.md  TEST_ENHANCEMENT_GUIDE.md  batch_quality_check.py  clean_test_file.py  enhance_all_categories.sh  example_generate_report.sh  example_quality_check.py  generate_leaderboard.py  generate_technical_report.py  install_sdk_tools.sh  process_test_files.py  quality_checker.py  quality_config.yaml  requirements-report.txt  test_comparator.py  test_enhancer.py  verify_sdk_builds.sh
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/cmake/: substrait_compliance_config.cmake.in
sdk/cpp/examples/: CMakeLists.txt  basic_engine.cpp
sdk/cpp/include/: substrait_compliance.h
sdk/cpp/include/substrait_compliance/: benchmark_runner.hpp  comparator.h  engine.h  error.h  loader.h  result.h  runner.h  table_data.h  test_suite.h
sdk/cpp/tests/: CMakeLists.txt  test_comparator.cpp  test_engine.cpp  test_result.cpp  test_table_data.cpp
sdk/csharp/: ComplianceResult.cs  ComplianceRunner.cs  IComplianceEngine.cs  README.md  Substrait.Compliance.csproj  TableData.cs  TestSuite.cs  TestSuiteLoader.cs
sdk/go/: README.md  engine.go  engine_test.go  go.mod  loader.go  result.go  result_test.go  runner.go  table_data.go  test_suite.go  (+1 more)
sdk/python/: README.md  install-dev.sh  pyproject.toml  requirements.txt  setup.py
sdk/python/substrait_compliance/: __init__.py  engine.py  exceptions.py  function_plan_generator.py  function_test_loader.py  function_test_parser.py  loader.py  result.py  runner.py  table_data.py  test_suite.py
sdk/python/substrait_compliance/benchmark/: __init__.py  benchmark_runner.py
sdk/python/tests/: __init__.py  test_engine.py  test_loader.py  test_result.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: benchmark_example.rs
sdk/rust/src/: engine.rs  error.rs  lib.rs  loader.rs  result.rs  runner.rs  table_data.rs  test_suite.rs
sdk/rust/src/benchmark/: mod.rs
sdk/rust/tests/: benchmark_test.rs  integration_test.rs
test-implementations/: README.md
(+709 files in other folders)
