[package]
name = "datafusion-substrait-compliance"
version = "0.1.0"
edition = "2021"
authors = ["Substrait Compliance Contributors"]
description = "DataFusion reference implementation for Substrait compliance testing"
license = "Apache-2.0"
repository = "https://github.com/substrait-io/substrait-compliance"

[dependencies]
datafusion = "35.0"
substrait = "0.80"
tokio = { version = "1.35", features = ["full"] }
prost = "0.12"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "datafusion-compliance-example"
path = "src/main.rs"

[lib]
name = "datafusion_substrait_compliance"
path = "src/lib.rs"

[[bench]]
name = "compliance_benchmark"
harness = false