[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "substrait-compliance"
version = "0.1.0"
description = "Decentralized compliance testing SDK for Substrait engines"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Substrait Community" }]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "protobuf>=4.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/IBM/substrait-compliance"
Repository = "https://github.com/IBM/substrait-compliance"

[tool.setuptools.packages.find]
where = ["."]
